[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Interface/Menus/SelectButton.gd" type="Script" id=1]
[ext_resource path="res://Assets/Menus/MainMenu/play.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menus/MainMenu/select_arrow.png" type="Texture" id=3]

[node name="SelectButton" type="TextureButton"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 0
texture_normal = ExtResource( 2 )
script = ExtResource( 1 )

[node name="SelectArrow" type="Sprite" parent="."]
position = Vector2( -9, 10 )
texture = ExtResource( 3 )

[connection signal="focus_entered" from="." to="." method="_on_SelectButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_SelectButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_SelectButton_mouse_entered"]
